2005-06-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.man: new file

2004-12-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl: Fixed bug in search for Trfcrypt (noticed by
	Antirez). Added a Reset command to the programming API to permit
	reuse of a key with a new initialization vector..

2004-12-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:  Add in support for Trfcrypt implementation.
	* blowfish.test: Support variable key length and added tests.

2004-12-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* blowfish.tcl:  Imported Frank Pilhofer's pure-Tcl implementation
	* blowfish.test: from the Tcler's wiki. Modified to remove the
	Itcl code and to conform to the tcllib programming standards and
	conventions. Test file includes standard test vectors.
	
